@@ -1,5 +1,8 @@
 [b]Version 0.5.62[/b] (not released yet):
 
+(2007-11-03)
+ * Adapted the code for patch select_sub_by_source_property2.diff.
+
 (2007-11-02)
  * Added the Greek translation sent by my80s <wamy80s@gmail.com>.
 
